Add Payment View ft Payment links - test>

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,10 @@
       rel="stylesheet"
     />
     <title>UWork</title>
+    <script
+      type="text/javascript"
+      src="https://checkout.wompi.co/widget.js"
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
